--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "cloudinary": "^1.30.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "hbs": "^4.2.0",
     "mongoose": "^6.4.6",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
